2008-02-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (figure): Implemented.
	(video, audio): In no-parent-element case with |src| attribute,
	the content model is now prose content.

2008-02-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (noscript): Reimplemented.

2008-02-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: |<meta http-equiv=Content-Type| support (HTML5 revision 
	1180).

2008-02-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (th): |th| now requires phrasing content.  |div|
	now requires prose content.

2008-02-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Error messages revised.

2008-02-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Most part of December 2007 Content Model is implemented.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (<style>): CSS validation code removed; instead,
	it does invoke subdoc callback to ask to the callee to validate
	the style sheet separately.

2008-02-09  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (<style>): Initial version of CSS validation support.

2007-11-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm ($HTMLSignificantContentErrors): New.

2007-11-25  Wakaba  <wakaba@suika.fam.cx>	

	* HTML.pm: Support for checking for significant content (HTML5
	revision 1114).  Note that the current implementation has
	an issue on treatment for transparent or semi-transparent
	elements.

	* Atom.pm: Support for significant content checking (for composed
	HTML-Atom documents).

2007-11-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (header): Descendant constraint is redefined by
	new todo item type |descendant|.

2007-11-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (nest/@filter, rule/@condition): Implemented.
	(nest/@mode): Definition was wrong.
	($HTMLSelectorsAttrChecker): New.

2007-11-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (meta): Character references in |charset| attribute
	values are now erred.

2007-11-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (meta): |charset| value tests implemented.
