@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Feb 17 23:06:37 2008
-# Current time GMT:   Sun Feb 17 14:06:37 2008
+# Current time local: Sun Feb 17 23:24:11 2008
+# Current time GMT:   Sun Feb 17 14:24:11 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
