@@ -3450,7 +3450,7 @@ aaa
 </details>
 </a>
 #errors
-/a/details;element not allowed:minus;m
+/a/details;element not allowed:phrasing;m
 /a;no significant content;s
 /a/details;no significant content;s
 /a/details/legend;no significant content;s
@@ -3462,7 +3462,7 @@ aaa
 </span>
 </a>
 #errors
-/a/span/details;element not allowed:minus;m
+/a/span/details;element not allowed:phrasing;m
 /a;no significant content;s
 /a/span;no significant content;s
 /a/span/details;no significant content;s
