@@ -1,7 +1,7 @@
 1..1734
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Feb 17 23:06:14 2008
-# Current time GMT:   Sun Feb 17 14:06:14 2008
+# Current time local: Sun Feb 17 23:23:15 2008
+# Current time GMT:   Sun Feb 17 14:23:15 2008
 # Using Test.pm version 1.25
 ok 1
 ok 2
