@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Feb 17 23:06:24 2008
-# Current time GMT:   Sun Feb 17 14:06:24 2008
+# Current time local: Sun Feb 17 23:23:40 2008
+# Current time GMT:   Sun Feb 17 14:23:40 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
