@@ -1,5 +1,9 @@
 2008-02-17  Wakaba  <wakaba@suika.fam.cx>
 
+	* content-model-1.dat: Test results corrected.
+
+2008-02-17  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-1.dat: New test data for |<figure>| are added.
 	Some test data are corrected.
 
